tests/negative/range_for_loop_var_assign.far
fun main() -> i64 {
  for i in 0..<4 {
    i = 99
  }
  return 0
}
